FIX: Alignment, Fonts, Text Styling

--- a/faq/src/css/faq.css
+++ b/faq/src/css/faq.css
@@ -2,7 +2,7 @@ body {
   font-family: Poppins, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f4f4f4;
+  background-color: #ffffff;
 }
 
 .items {
@@ -13,9 +13,13 @@ body {
   display: flex;
   flex-direction: row; /* Change flex-direction to row */
   gap: 1rem;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  align-items: start;
 }
 
+.faqs ul{
+    gap: 1rem;
+}
 .faq-text {
   display: flex;
   padding: 2rem;
@@ -55,11 +59,13 @@ body {
 }
 
 .center-right {
-  display: flex;
-  flex-direction: column;
-  float: inline-end;
-  margin-right: 6rem;
-  margin-top: 6rem;
+    display: flex;
+    width: -webkit-fill-available;
+    flex-direction: column;
+    float: inline-end;
+    margin-right: 6rem;
+    margin-top: 3rem;
+    align-items: flex-end;
 }
 
 .center-right img {
@@ -136,6 +142,13 @@ body {
   /* text-align: center; */
 }
 
+.center-column-footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
 .footer ul {
   padding: 4rem;
   margin: 0;
@@ -205,4 +218,31 @@ body {
   width: 100%;
   height: 100%;
   object-fit: fill; /* Ensures the image covers the container while maintaining its aspect ratio */
+}
+
+.topic{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.topic h2{
+  text-align: center;
+}
+
+.questions{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.questions ul{
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.questions p{
+  display: flex;
+  flex-direction: row;
 }
