--- a/faq/src/css/styles.css
+++ b/faq/src/css/styles.css
@@ -2,64 +2,80 @@
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-}
-
 .nav {
-    background-color: #F2F5F7;
-    color: rgb(16, 3, 3);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 16%;
-    padding: 0 1rem;
+  background-color: #f2f5f7;
+  color: rgb(16, 3, 3);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1rem;
+  gap: 1rem;
+  height: 82px;
 }
 
 .site-title {
-    font-size: 2rem;
-    display: flex;
-    flex-direction: row;
+  font-size: 2rem;
+  display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 
-.site-title img{
-    width: 100px;
-    height: 100px;
-    object-fit: fill;
-   
-}
-.nav ul{
-    padding: 0;
-    margin: 0;
-    list-style:none;
-    display: flex;
-    gap: 1rem;
+.site-title img {
+  width: 100px;
+  height: 100px;
+  object-fit: fill;
 }
 
-.nav li{
-    width: auto;
+.nav button {
+  border: none;
+  color: black;
+}
+.nav ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  gap: 6rem;
+}
+
+.nav li {
+  width: auto;
 }
 .nav a {
-    color: inherit;
-    text-decoration: none;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding: .25rem;
+  color: inherit;
+  text-decoration: none;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0.25rem;
 }
 
 .nav li.active {
-    background-color: #555;
+  background-color: #555;
 }
- 
+
 .nav li:hover {
-    background-color: #777;
+  background-color: #777;
 }
 
 .btn-purple {
-    background-color: purple;
-    color: white;
-   
+  background-color: purple;
+  color: white;
+}
+
+.auth-buttons {
+  display: flex;
+  gap: 1rem;
+}
+
+.auth-buttons button {
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 16px;
 }
